--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Bootstrap Test</title>
 </head>
+
 <body>
-    <h1>Teste
+    <!-- Tags de heading -->
+    <h1>Bootstrap 5</h1>
+    <h2>This is h2 </h2>
+    <h3>this is h3</h3>
+    <p>this is p tag</p>
+    <p class="h1">this is a p tag with h1 class</p>
+    <!-- ------------ -->
+    <hr/>
+    <!-- Tags de display de headings -->
+    <h1 class="display-1">This is a h1 with a display class</h1>
+    <p class="display-1">This is a p tag with a display class</p>
+    <h1 class="display-2">This is a h1 with a display class</h1>
+    <h1 class="display-3">This is a h1 with a display class</h1>
+    <!-- ------ -->
+    <hr/>
+    <!-- Tag lead text e alignment -->
+    <p>normal p tag</p>
+    <p class="lead">p tag with lead class</p>
+    <p class="lead text-end">p tag with lead text-end class</p>
+    <p class="lead text-center">p tag with lead text-center class</p>
+    <!-- ----- -->
+    <hr/>
+    <!-- text decoration and font weight -->
+    <p class="text-decoration-underline">Texto com sublinhado</p>
+    <p class="text-decoration-line-through">Texto com linha contínua</p>
+    <p class="fw-bold">p tag with fw-bold class</p>
+    <small>this is small tag</small>
+    <!-- --------- -->
+    <hr/>
+    <!-- Text colors -->
+    <p class="text-primary">p tag with text-primary</p>
+    <p class="text-secondary">p tag with text-secondary</p>
+    <p class="text-info">p tag with text-info</p>
+    <p class="text-warning">p tag with text-warning</p>
+    <p class="text-danger">p tag with text-danger</p>
+    <p class="text-success">p tag with text-sucess</p>
+    <p class="text-muted">p tag with text-muted</p>
+    <hr/>
 
-    </h1>
+    <!-- bg colors -->
+    <p class="text-white bg-primary">p tag with text-white bg-primary</p>
+    <p class="text-black bg-secondary">p tag with text-black bg-secondary</p>
+    <p class="text-light bg-success">p tag with text-light bg-success</p>
 
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
