--- a/index.html
+++ b/index.html
@@ -8,9 +8,37 @@
     <title>Bootstrap Test</title>
 </head>
 <body>
-    <h1>Teste
-
-    </h1>
+    <!-- Basic Buttons -->
+    <h2>Buttons</h2>
+    <button class="btn btn-primary">Button primary</button>
+    <button class="btn btn-secondary">Button secondary</button>
+    <button class="btn btn-warning">Button warning</button>
+    <button class="btn btn-info ">Button info</button>
+    <button class="btn btn-success">Button btn-success</button>
+    <button class="btn btn-danger">Button danger</button>
+    <!-- Anchor Tags -->
+    <h2>Links as Buttons</h2>
+    <a href="#" class="btn btn-primary">info anchor tag</a>
+    <a href="#" class="btn btn-success">success anchor tag</a>
+    <!-- Button Sizes -->
+    <h2>Buttons sizes</h2>
+    <button class="btn btn-lg btn-danger">large danger button</button>
+    <button class="btn btn-sm btn-danger">large danger button</button>
+    <!-- Outlines Styles -->
+    <button class="btn btn-outline-primary">outlined primary button</button>
+    <button class="btn btn-outline-primary btn-lg"> outlined large primary button</button>
+    <h2>Buttons styles</h2>
+    <!-- Buttons Groups -->
+    <div class="btn-group">
+        <button class="btn btn-primary">button 1</button>
+        <button class="btn btn-primary">button 2</button>
+        <button class="btn btn-primary">button 3</button>
+    </div>
+    <div class="btn-group">
+        <a href="#" class="btn btn-primary">button link 1</a>
+        <a href="#" class="btn btn-primary">button link 2</a>
+        <a href="#" class="btn btn-primary">button link 3</a>
+    </div>
 
 
 
