--- a/index.html
+++ b/index.html
@@ -8,37 +8,30 @@
     <title>Bootstrap Test</title>
 </head>
 <body>
-    <!-- Basic Buttons -->
-    <h2>Buttons</h2>
-    <button class="btn btn-primary">Button primary</button>
-    <button class="btn btn-secondary">Button secondary</button>
-    <button class="btn btn-warning">Button warning</button>
-    <button class="btn btn-info ">Button info</button>
-    <button class="btn btn-success">Button btn-success</button>
-    <button class="btn btn-danger">Button danger</button>
-    <!-- Anchor Tags -->
-    <h2>Links as Buttons</h2>
-    <a href="#" class="btn btn-primary">info anchor tag</a>
-    <a href="#" class="btn btn-success">success anchor tag</a>
-    <!-- Button Sizes -->
-    <h2>Buttons sizes</h2>
-    <button class="btn btn-lg btn-danger">large danger button</button>
-    <button class="btn btn-sm btn-danger">large danger button</button>
-    <!-- Outlines Styles -->
-    <button class="btn btn-outline-primary">outlined primary button</button>
-    <button class="btn btn-outline-primary btn-lg"> outlined large primary button</button>
-    <h2>Buttons styles</h2>
-    <!-- Buttons Groups -->
-    <div class="btn-group">
-        <button class="btn btn-primary">button 1</button>
-        <button class="btn btn-primary">button 2</button>
-        <button class="btn btn-primary">button 3</button>
-    </div>
-    <div class="btn-group">
-        <a href="#" class="btn btn-primary">button link 1</a>
-        <a href="#" class="btn btn-primary">button link 2</a>
-        <a href="#" class="btn btn-primary">button link 3</a>
-    </div>
+    <!-- margin and padding -->
+    <div class="btn-primary m-2 p-1">small margin and padding</div>
+    <div class="btn-primary m-5 p-4">large margin and padding</div>
+    <div class="btn-primary my-2 px-2">margin in y direction, padding in x direction</div>
+
+    <!-- borders -->
+    <div class="m-2 p-1 border">border applied</div>
+    <div class="m-2 p-1 border-top border-end">border applied at top and end</div>
+    <div class="m-2 p-1 border-start border-success">border applied at the start with success</div>
+    <div class="m-2 p-1 border-start border-warning ">border applied at the start with warning</div>
+    <div class="m-3 p-3 border-start border-warning border-5 ">thicker border</div>
+    <div class="m-3 p-3 rounded border border-warning border-5 ">rounder border</div>
+    <div class="m-3 p-3 rounded-pill border border-warning border-5 ">rounder border</div>
+
+    <!-- box shadow -->
+    <div class="m-3 p-3 shadow">element with large shadow box</div>
+    <div class="m-3 p-3 shadow-sm">element with a small shadow box</div>
+
+    <!-- font weight -->
+    <p class="fw-bold">bold text</p>
+    <p class="fw-bolder">bolder text</p>
+    <p class="fw-light">light text</p>
+    <p >normal text</p>
+    <p class="fst-italic fw-light">italic text with light</p>
 
 
 
