--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Bootstrap Test</title>
 </head>
+
 <body>
-    <h1>Teste
+    <!-- Containers -->
+    <div class="container my-5">
+        <h2>normal container</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem ad quae inventore provident expedita quasi
+            veritatis? Laudantium, cumque quam? Expedita.</p>
+    </div>
 
-    </h1>
+    <div class="container-fluid">
+        <h2>fluid container</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam laborum pariatur, nulla atque culpa
+            expedita praesentium, similique laudantium sapiente laboriosam ex ad, soluta sequi consequatur ut quasi
+            explicabo? Saepe, nulla!</p>
+    </div>
+
+    <div class="container-lg my-5">
+        <h2>100% width until lg screens, container</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis neque culpa quibusdam enim rerum quod?
+            Voluptatum soluta animi assumenda voluptatem, atque neque iure. Ut dicta nemo et accusamus amet optio?</p>
+    </div>
+    <div class="container-xl my-5">
+        <h2>100% width until lg screens, container</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis neque culpa quibusdam enim rerum quod?
+            Voluptatum soluta animi assumenda voluptatem, atque neque iure. Ut dicta nemo et accusamus amet optio?</p>
+    </div>
 
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
