--- a/index.html
+++ b/index.html
@@ -7,76 +7,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Bootstrap Test</title>
+    <title>Random Addict</title>
+    <style>
+        section {
+            padding: 60px 0;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container-lg my-5">
-        <h2>Basic grid
-        </h2>
-        <div class="row">
-                <div class="col">
-                    <div class="p-5 bg-primary text-light">col 1</div>
-                </div>
-                <div class="col">
-                    <div class="p-5 bg-primary text-light">col 2</div>
-                </div>
-                <div class="col">
-                    <div class="p-5 bg-primary text-light">col 3</div>
-                </div>
-                <div class="col">
-                    <div class="p-5 bg-primary text-light">col 3</div>
-                </div>
-        </div>
-    </div>
-    
-    <div class="container-lg my-5">
-        <h2>column widths
-        </h2>
-        <div class="row">
-            <div class="col-6">
-                <div class="p-5 bg-primary text-light">col 1</div>
-            </div>
-            <div class="col-3">
-                <div class="p-5 bg-primary text-light">col 2</div>
-            </div>
-            <div class="col-3">
-                <div class="p-5 bg-primary text-light">col 3</div>
-            </div>
-    </div>
-    </div>
-    <div class="container-lg my-5">
-        <h2>responsive column widths
-        </h2>
-        <div class="row">
-            <div class="col-sm-4 col-lg-6">
-                <div class="p-5 bg-primary text-light">col 1</div>
-            </div>
-            <div class="col-sm-4 col-lg-3">
-                <div class="p-5 bg-primary text-light">col 2</div>
-            </div>
-            <div class="col-sm-4 col-lg-3">
-                <div class="p-5 bg-primary text-light">col 3</div>
-            </div>
-    </div>
-    </div>
-    <div class="container-lg my-5">
-        <h2>justifying columns
-        </h2>
-        <div class="row justify-content-between">
-            <div class="col-md-3">
-                <div class="p-5 bg-primary text-light">col 1</div>
-                </div>
-            <div class="col-md-3">
-                <div class="p-5 bg-primary text-light">col 2</div>
-            </div>
-            <div class="col-md-3">
-                <div class="p-5 bg-primary text-light">col 3</div>
-        </div>
-    </div>
-    </div>
 
-        
+    <!-- navbar -->
+
+    <!-- main image & intro text -->
+    <section id="intro">
+        <div class="container-lg">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-5 text-center text-md-start">
+                    <h1>
+                        <div class="display-2">Just do it</div>
+                        <div class="display-5">Reveal it to the world</div>
+                    </h1>
+                    <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae.</p>
+                    <a href="#pricing" class="btn btn-success btn-lg">Do it now</a>
+                </div>
+                <div class="col-md-5 text-center d-none d-md-block">
+                    <img class="img-fluid" src="assets/h6unhgup.bmp" alt="random image">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
