--- a/index.html
+++ b/index.html
@@ -18,7 +18,39 @@
 <body>
 
     <!-- navbar -->
-
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-xl">
+            <a href="#intro" class="navbar-brand"><span class="fw-bold text-info">
+                    Get to it Now!
+                </span>
+            </a>
+            <!-- toggle button for mobile nav -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+                aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- navbar links -->
+            <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#topics">About this</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#reviews">The talking</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contacts">Stay in contact</a>
+                  </li>
+                  <li class="nav-item d-md-none">
+                    <a class="nav-link" href="#pricing">Envolve yourself</a>
+                  </li>
+                  <li class="nav-item ms-2 d-none d-md-inline">
+                    <a class="btn btn-secondary" href="#pricing">Envolve yourself</a>
+                  </li>
+                </ul>
+              </div>
+        </div>
+    </nav>
     <!-- main image & intro text -->
     <section id="intro">
         <div class="container-lg">
