--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#topics">About this</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#reviews">The talking</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#contacts">Stay in contact</a>
-                  </li>
-                  <li class="nav-item d-md-none">
-                    <a class="nav-link" href="#pricing">Envolve yourself</a>
-                  </li>
-                  <li class="nav-item ms-2 d-none d-md-inline">
-                    <a class="btn btn-secondary" href="#pricing">Envolve yourself</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#topics">About this</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#reviews">The talking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contacts">Stay in contact</a>
+                    </li>
+                    <li class="nav-item d-md-none">
+                        <a class="nav-link" href="#pricing">Envolve yourself</a>
+                    </li>
+                    <li class="nav-item ms-2 d-none d-md-inline">
+                        <a class="btn btn-secondary" href="#pricing">Envolve yourself</a>
+                    </li>
                 </ul>
-              </div>
+            </div>
         </div>
     </nav>
     <!-- main image & intro text -->
@@ -65,6 +65,52 @@
                 </div>
                 <div class="col-md-5 text-center d-none d-md-block">
                     <img class="img-fluid" src="assets/h6unhgup.bmp" alt="random image">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- pricing plans -->
+    <section id="pricing" class="bg-light mt-5">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2>Pricing plans</h2>
+                <p class="lead text-muted">Choose your plan</p>
+            </div>
+        </div>
+        <div class="row my-5 align-items-center justify-content-center g-2">
+            <div class="col-8 col-lg-4 col-xl-3">
+                <div class="card border-0">
+                    <div class="card-body text-center py-4">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="lead card-subtitle">One of many of us.</p>
+                        <p class="display-5 my-4 text-primary fw-bold">The real deal.</p>
+                        <p class="card-text mx-5 text-muted d-none d-lg-block">The usual Lorem ipsum dolor sit amet.</p>
+                        <a href="#" class="btn btn-outline-primary btn-lg mt-3">Just Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-9 col-lg-4">
+                <div class="card border-primary border-2">
+                    <div class="card-header text-center text-primary">The special one</div>
+                    <div class="card-body text-center py-5">
+                        <h5 class="card-title">Special edition treatment</h5>
+                        <p class="lead card-subtitle">One of few of us.</p>
+                        <p class="display-4 my-4 text-primary fw-bold">A simulation of time.</p>
+                        <p class="card-text mx-5 text-muted d-none d-lg-block">The usual Lorem ipsum dolor sit amet.</p>
+                        <a href="#" class="btn btn-outline-primary btn-lg mt-3">Just Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-8 col-lg-4 col-xl-3">
+                <div class="card border-0">
+                    <div class="card-body text-center py-4">
+                        <h5 class="card-title">Ultimate Alliance</h5>
+                        <p class="lead card-subtitle">He is the One.</p>
+                        <p class="display-5 my-4 text-primary fw-bold">The Matrix.</p>
+                        <p class="card-text mx-5 text-muted d-none d-lg-block">The usual Lorem ipsum dolor sit amet.</p>
+                        <a href="#" class="btn btn-outline-primary btn-lg mt-3">Just Go</a>
+                    </div>
                 </div>
             </div>
         </div>
