--- a/index.html
+++ b/index.html
@@ -115,7 +115,73 @@
             </div>
         </div>
     </section>
-
+    <!-- Topics at a glance -->
+    <section id="topics">
+        <div class="container-md">
+            <div class="text-center">
+                <h2>Inside the Mind</h2>
+                <p class="lead text-muted">A quick glance at this dude's mind</p>
+            </div>
+        </div>
+        <div class="row my-5 g-5 justify-content-around align-items-center">
+            <div class="col-9 col-lg-4">
+                <img src="assets/computer.jpg" alt="Boy" class="img-fluid">
+            </div>
+            <div class="col-lg-6">
+            <!-- accordion -->
+            <div class="accordion" id="chapters">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-1">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#chapter-1" aria-expanded="true" aria-controls="chapter-1">
+                            First One
+                        </button>
+                    </h2>
+                    <div id="chapter-1" class="accordion-collapse collapse show" aria-labelledby="chapter-1"
+                        data-bs-parent="#chapters">
+                        <div class="accordion-body">
+                            <p>Another Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ea alias
+                                dignissimos impedit officiis enim necessitatibus, odit, itaque omnis, eveniet cumque
+                                pariatur minima et iste.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-2">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#chapter-2" aria-expanded="true" aria-controls="chapter-2">
+                            Second One
+                        </button>
+                    </h2>
+                    <div id="chapter-2" class="accordion-collapse collapse" aria-labelledby="chapter-2"
+                        data-bs-parent="#chapters">
+                        <div class="accordion-body">
+                            <p>Another Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis libero
+                                ut esse adipisci fugiat perspiciatis animi explicabo, doloremque quibusdam porro, minus
+                                numquam aliquid eveniet?.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-3">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#chapter-3" aria-expanded="true" aria-controls="chapter-3">
+                            Third One
+                        </button>
+                    </h2>
+                    <div id="chapter-3" class="accordion-collapse collapse" aria-labelledby="chapter-3"
+                        data-bs-parent="#chapters">
+                        <div class="accordion-body">
+                            <p>Another Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quas tenetur
+                                voluptatum, delectus similique deserunt doloribus nemo ratione, sed harum vel suscipit
+                                animi pariatur perspiciatis?.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
