--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                     </h1>
                     <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae.</p>
                     <a href="#pricing" class="btn btn-success btn-lg">Do it now</a>
+                    <!-- sidebar aka offcanvas -->
+                    <a class="d-block mt-3 btn btn-primary btn-sm d-grid col-4" data-bs-toggle="offcanvas" href="#sidebar" role="button" aria-controls="sidebar">
+                        Check this out
+                      </a>
                 </div>
                 <div class="col-md-5 text-center d-none d-md-block">
                     <!-- Tooltip -->
@@ -332,6 +336,39 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- The sidebar -->
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="sidebarLabel">The other Stuff</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div>
+              <p class="lead">Lorem ipsum dolor sit.</p>
+              <a href="#"><img src="assets/tela.jpg"  class="img-fluid" alt=""></a>
+            </div>
+            <div>
+              <p class="lead">Lorem ipsum dolor sit.</p>
+             <a href="#"><img src="assets/boy.jpg"  class="img-fluid" alt=""></a>
+            </div>
+            <div>
+              <p class="lead">Lorem ipsum dolor sit.</p>
+             <a href="#"><img src="assets/z5d68x43.bmp"  class="img-fluid" alt=""></a>
+            </div>
+            <div class="dropdown mt-3">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                Dropdown button
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </div>
+          </div>
+
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
