Aula terminada (Problemas no sidebar)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <title>Random Addict</title>
@@ -198,11 +197,11 @@
     </section>
 
     <!-- reviews -->
-    <section id="reviews" class="bg-light">
+    <section id="reviews" class="bg-altlight">
         <div class="container-lg">
             <div class="text-center">
 
-                <h2><i class="bi bi-hypnotize"></i> The Reviews</h2>
+                <h2><i class="bi bi-hypnotize text-altdark"></i> The Reviews</h2>
                 <p class="lead">What the others say about this!</p>
             </div>
             <div class="row justify-content-center">
@@ -342,7 +341,7 @@
       <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sidebarLabel">The other Stuff</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
             <div>
@@ -357,16 +356,7 @@
               <p class="lead">Lorem ipsum dolor sit.</p>
              <a href="#"><img src="assets/z5d68x43.bmp"  class="img-fluid" alt=""></a>
             </div>
-            <div class="dropdown mt-3">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                Dropdown button
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </div>
+           
           </div>
 
       </div>
